packages/dartcv/src/calib3d/calib3d.h

CvStatus *cv_calibrateCamera(
    VecVecPoint3f objectPoints,
    VecVecPoint2f imagePoints,
    CvSize imageSize,
    Mat cameraMatrix,
    Mat distCoeffs,
    Mat rvecs,
    Mat tvecs,
    int flag,
    TermCriteria criteria,
    double *rval,
    CvCallback_0 callback
);
// Finds the camera intrinsic and extrinsic parameters from several views of a calibration pattern.
// double cv::calibrateCameraRO (InputArrayOfArrays objectPoints, InputArrayOfArrays imagePoints, Size imageSize, int iFixedPoint, InputOutputArray cameraMatrix, InputOutputArray distCoeffs, OutputArrayOfArrays rvecs, OutputArrayOfArrays tvecs, OutputArray newObjPoints, OutputArray stdDeviationsIntrinsics, OutputArray stdDeviationsExtrinsics, OutputArray stdDeviationsObjPoints, OutputArray perViewErrors, int flags=0, TermCriteria criteria=TermCriteria(TermCriteria::COUNT+TermCriteria::EPS, 30, DBL_EPSILON));

// Computes Hand-Eye calibration:
// void cv::calibrateHandEye (InputArrayOfArrays R_gripper2base, InputArrayOfArrays t_gripper2base, InputArrayOfArrays R_target2cam, InputArrayOfArrays t_target2cam, OutputArray R_cam2gripper, OutputArray t_cam2gripper, HandEyeCalibrationMethod method=CALIB_HAND_EYE_TSAI);

// Computes Robot-World/Hand-Eye calibration:
// void cv::calibrateRobotWorldHandEye (InputArrayOfArrays R_world2cam, InputArrayOfArrays t_world2cam, InputArrayOfArrays R_base2gripper, InputArrayOfArrays t_base2gripper, OutputArray R_base2world, OutputArray t_base2world, OutputArray R_gripper2cam, OutputArray t_gripper2cam, RobotWorldHandEyeCalibrationMethod method=CALIB_ROBOT_WORLD_HAND_EYE_SHAH);

// Computes useful camera characteristics from the camera intrinsic matrix.
// void cv::calibrationMatrixValues (InputArray cameraMatrix, Size imageSize, double apertureWidth, double apertureHeight, double &fovx, double &fovy, double &focalLength, Point2d &principalPoint, double &aspectRatio);

bool cv_checkChessboard(Mat img, CvSize size);
// Combines two rotation-and-shift transformations.
// void cv::composeRT (InputArray rvec1, InputArray tvec1, InputArray rvec2, InputArray tvec2, OutputArray rvec3, OutputArray tvec3, OutputArray dr3dr1=noArray(), OutputArray dr3dt1=noArray(), OutputArray dr3dr2=noArray(), OutputArray dr3dt2=noArray(), OutputArray dt3dr1=noArray(), OutputArray dt3dt1=noArray(), OutputArray dt3dr2=noArray(), OutputArray dt3dt2=noArray());

// For points in an image of a stereo pair, computes the corresponding epilines in the other image.
// void cv::computeCorrespondEpilines (InputArray points, int whichImage, InputArray F, OutputArray lines);
CvStatus *cv_computeCorrespondEpilines(MatIn src, int whichImage, MatIn F, MatOut lines, CvCallback_0 callback);
// Converts points from homogeneous to Euclidean space.
// void cv::convertPointsFromHomogeneous (InputArray src, OutputArray dst);
CvStatus *cv_convertPointsFromHomogeneous(MatIn src, MatOut dst, CvCallback_0 callback);
// Converts points to/from homogeneous coordinates.
// void cv::convertPointsHomogeneous (InputArray src, OutputArray dst);
CvStatus *cv_convertPointsHomogeneous(MatIn src, MatOut dst, CvCallback_0 callback);
// Converts points from Euclidean to homogeneous space.
// void cv::convertPointsToHomogeneous (InputArray src, OutputArray dst);
CvStatus *cv_convertPointsToHomogeneous(MatIn src, MatOut dst, CvCallback_0 callback);
// Refines coordinates of corresponding points.
// void cv::correctMatches (InputArray F, InputArray points1, InputArray points2, OutputArray newPoints1, OutputArray newPoints2);
CvStatus *cv_correctMatches(MatIn F, MatIn points1, MatIn points2, MatOut newPoints1, MatOut newPoints2,
                            CvCallback_0 callback);
// Decompose an essential matrix to possible rotations and translation.
// void cv::decomposeEssentialMat (InputArray E, OutputArray R1, OutputArray R2, OutputArray t);
CvStatus *cv_decomposeEssentialMat(MatIn E, MatOut R1, MatOut R2, MatOut t, CvCallback_0 callback);
// Decompose a homography matrix to rotation(s), translation(s) and plane normal(s).
// int cv::decomposeHomographyMat (InputArray H, InputArray K, OutputArrayOfArrays rotations, OutputArrayOfArrays translations, OutputArrayOfArrays normals)
CvStatus *cv_decomposeHomographyMat(MatIn H, MatIn K, VecMat rotations, VecMat translations, VecMat normals, int *rval,
                                    CvCallback_0 callback);
// Decomposes a projection matrix into a rotation matrix and a camera intrinsic matrix.
// void cv::decomposeProjectionMatrix (InputArray projMatrix, OutputArray cameraMatrix, OutputArray rotMatrix, OutputArray transVect, OutputArray rotMatrixX=noArray(), OutputArray rotMatrixY=noArray(), OutputArray rotMatrixZ=noArray(), OutputArray eulerAngles=noArray())
CvStatus *cv_decomposeProjectionMatrix(MatIn projMatrix, MatOut cameraMatrix, MatOut rotMatrix, MatOut transVect,
                                       MatOut rotMatrixX, MatOut rotMatrixY, MatOut rotMatrixZ, MatOut eulerAngles,
                                       CvCallback_0 callback);
// Renders the detected chessboard corners.
// void cv::drawChessboardCorners (InputOutputArray image, Size patternSize, InputArray corners, bool patternWasFound)
CvStatus *cv_drawChessboardCorners(
    Mat image, CvSize patternSize, VecPoint2f corners, bool patternWasFound, CvCallback_0 callback
);
// Converts a rotation matrix to a rotation vector or vice versa.
// void cv::Rodrigues (InputArray src, OutputArray dst, OutputArray jacobian=noArray())
CvStatus *cv_Rodrigues(MatIn src, MatOut dst, MatOut jacobian, CvCallback_0 callback);
// Computes an RQ decomposition of 3x3 matrices.
// Vec3d cv::RQDecomp3x3 (InputArray src, OutputArray mtxR, OutputArray mtxQ, OutputArray Qx=noArray(), OutputArray Qy=noArray(), OutputArray Qz=noArray())
CvStatus *cv_RQDecomp3x3(MatIn src, MatOut mtxR, MatOut mtxQ, MatOut Qx, MatOut Qy, MatOut Qz, Vec3d *rval,
                         CvCallback_0 callback);