packages/dartcv/lib/src/g/calib3d.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
import 'package:dartcv4/src/g/types.g.dart' as imp1;

/// Native bindings for OpenCV - Calib3d
///
class CvNativeCalib3d {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CvNativeCalib3d(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CvNativeCalib3d.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<CvStatus> cv_RQDecomp3x3(
    imp1.MatIn src,
    imp1.MatOut mtxR,
    imp1.MatOut mtxQ,
    imp1.MatOut Qx,
    imp1.MatOut Qy,
    imp1.MatOut Qz,
    ffi.Pointer<Vec3d> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_RQDecomp3x3(
      src,
      mtxR,
      mtxQ,
      Qx,
      Qy,
      Qz,
      rval,
      callback,
    );
  }

  late final _cv_RQDecomp3x3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              ffi.Pointer<Vec3d>,
              imp1.CvCallback_0)>>('cv_RQDecomp3x3');
  late final _cv_RQDecomp3x3 = _cv_RQDecomp3x3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatOut,
          imp1.MatOut,
          imp1.MatOut,
          imp1.MatOut,
          imp1.MatOut,
          ffi.Pointer<Vec3d>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Rodrigues(
    imp1.MatIn src,
    imp1.MatOut dst,
    imp1.MatOut jacobian,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Rodrigues(
      src,
      dst,
      jacobian,
      callback,
    );
  }

  late final _cv_RodriguesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatOut, imp1.MatOut,
              imp1.CvCallback_0)>>('cv_Rodrigues');
  late final _cv_Rodrigues = _cv_RodriguesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn, imp1.MatOut, imp1.MatOut, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_calibrateCamera(
    VecVecPoint3f objectPoints,
    VecVecPoint2f imagePoints,
    CvSize imageSize,
    Mat cameraMatrix,
    Mat distCoeffs,
    Mat rvecs,
    Mat tvecs,
    int flag,
    TermCriteria criteria,
    ffi.Pointer<ffi.Double> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_calibrateCamera(
      objectPoints,
      imagePoints,
      imageSize,
      cameraMatrix,
      distCoeffs,
      rvecs,
      tvecs,
      flag,
      criteria,
      rval,
      callback,
    );
  }

  late final _cv_calibrateCameraPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecVecPoint3f,
              VecVecPoint2f,
              CvSize,
              Mat,
              Mat,
              Mat,
              Mat,
              ffi.Int,
              TermCriteria,
              ffi.Pointer<ffi.Double>,
              imp1.CvCallback_0)>>('cv_calibrateCamera');
  late final _cv_calibrateCamera = _cv_calibrateCameraPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecVecPoint3f,
          VecVecPoint2f,
          CvSize,
          Mat,
          Mat,
          Mat,
          Mat,
          int,
          TermCriteria,
          ffi.Pointer<ffi.Double>,
          imp1.CvCallback_0)>();

  bool cv_checkChessboard(
    Mat img,
    CvSize size,
  ) {
    return _cv_checkChessboard(
      img,
      size,
    );
  }

  late final _cv_checkChessboardPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Mat, CvSize)>>(
          'cv_checkChessboard');
  late final _cv_checkChessboard =
      _cv_checkChessboardPtr.asFunction<bool Function(Mat, CvSize)>();

  ffi.Pointer<CvStatus> cv_computeCorrespondEpilines(
    imp1.MatIn src,
    int whichImage,
    imp1.MatIn F,
    imp1.MatOut lines,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_computeCorrespondEpilines(
      src,
      whichImage,
      F,
      lines,
      callback,
    );
  }

  late final _cv_computeCorrespondEpilinesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, ffi.Int, imp1.MatIn,
              imp1.MatOut, imp1.CvCallback_0)>>('cv_computeCorrespondEpilines');
  late final _cv_computeCorrespondEpilines =
      _cv_computeCorrespondEpilinesPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn, int, imp1.MatIn, imp1.MatOut, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_convertPointsFromHomogeneous(
    imp1.MatIn src,
    imp1.MatOut dst,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_convertPointsFromHomogeneous(
      src,
      dst,
      callback,
    );
  }

  late final _cv_convertPointsFromHomogeneousPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatOut,
              imp1.CvCallback_0)>>('cv_convertPointsFromHomogeneous');
  late final _cv_convertPointsFromHomogeneous =
      _cv_convertPointsFromHomogeneousPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn, imp1.MatOut, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_convertPointsHomogeneous(
    imp1.MatIn src,
    imp1.MatOut dst,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_convertPointsHomogeneous(
      src,
      dst,
      callback,
    );
  }

  late final _cv_convertPointsHomogeneousPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatOut,
              imp1.CvCallback_0)>>('cv_convertPointsHomogeneous');
  late final _cv_convertPointsHomogeneous =
      _cv_convertPointsHomogeneousPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn, imp1.MatOut, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_convertPointsToHomogeneous(
    imp1.MatIn src,
    imp1.MatOut dst,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_convertPointsToHomogeneous(
      src,
      dst,
      callback,
    );
  }

  late final _cv_convertPointsToHomogeneousPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatOut,
              imp1.CvCallback_0)>>('cv_convertPointsToHomogeneous');
  late final _cv_convertPointsToHomogeneous =
      _cv_convertPointsToHomogeneousPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn, imp1.MatOut, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_correctMatches(
    imp1.MatIn F,
    imp1.MatIn points1,
    imp1.MatIn points2,
    imp1.MatOut newPoints1,
    imp1.MatOut newPoints2,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_correctMatches(
      F,
      points1,
      points2,
      newPoints1,
      newPoints2,
      callback,
    );
  }

  late final _cv_correctMatchesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              imp1.CvCallback_0)>>('cv_correctMatches');
  late final _cv_correctMatches = _cv_correctMatchesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatIn, imp1.MatIn,
          imp1.MatOut, imp1.MatOut, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_decomposeEssentialMat(
    imp1.MatIn E,
    imp1.MatOut R1,
    imp1.MatOut R2,
    imp1.MatOut t,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_decomposeEssentialMat(
      E,
      R1,
      R2,
      t,
      callback,
    );
  }

  late final _cv_decomposeEssentialMatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatOut, imp1.MatOut,
              imp1.MatOut, imp1.CvCallback_0)>>('cv_decomposeEssentialMat');
  late final _cv_decomposeEssentialMat =
      _cv_decomposeEssentialMatPtr.asFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatOut, imp1.MatOut,
              imp1.MatOut, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_decomposeHomographyMat(
    imp1.MatIn H,
    imp1.MatIn K,
    VecMat rotations,
    VecMat translations,
    VecMat normals,
    ffi.Pointer<ffi.Int> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_decomposeHomographyMat(
      H,
      K,
      rotations,
      translations,
      normals,
      rval,
      callback,
    );
  }

  late final _cv_decomposeHomographyMatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              VecMat,
              VecMat,
              VecMat,
              ffi.Pointer<ffi.Int>,
              imp1.CvCallback_0)>>('cv_decomposeHomographyMat');
  late final _cv_decomposeHomographyMat =
      _cv_decomposeHomographyMatPtr.asFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatIn, VecMat, VecMat,
              VecMat, ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_decomposeProjectionMatrix(
    imp1.MatIn projMatrix,
    imp1.MatOut cameraMatrix,
    imp1.MatOut rotMatrix,
    imp1.MatOut transVect,
    imp1.MatOut rotMatrixX,
    imp1.MatOut rotMatrixY,
    imp1.MatOut rotMatrixZ,
    imp1.MatOut eulerAngles,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_decomposeProjectionMatrix(
      projMatrix,
      cameraMatrix,
      rotMatrix,
      transVect,
      rotMatrixX,
      rotMatrixY,
      rotMatrixZ,
      eulerAngles,
      callback,
    );
  }

  late final _cv_decomposeProjectionMatrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.CvCallback_0)>>('cv_decomposeProjectionMatrix');
  late final _cv_decomposeProjectionMatrix =
      _cv_decomposeProjectionMatrixPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_drawChessboardCorners(
    Mat image,
    CvSize patternSize,
    VecPoint2f corners,
    bool patternWasFound,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_drawChessboardCorners(
      image,
      patternSize,
      corners,
      patternWasFound,
      callback,
    );
  }

  late final _cv_drawChessboardCornersPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvSize, VecPoint2f, ffi.Bool,
              imp1.CvCallback_0)>>('cv_drawChessboardCorners');
  late final _cv_drawChessboardCorners =
      _cv_drawChessboardCornersPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, CvSize, VecPoint2f, bool, imp1.CvCallback_0)>();
